@@ -192,6 +192,12 @@ void KWParag::insertVariable(unsigned int _pos,KWVariable *_var)
   text.insert(_pos,v);
 }
 
+void KWParag::insertFootNote(unsigned int _pos,KWFootNote *_fn)
+{
+  KWCharFootNote *fn = new KWCharFootNote(_fn);
+  text.insert(_pos,fn);
+}
+
 void KWParag::insertPictureAsChar(unsigned int _pos,QString _filename)
 {
   KWImage _image = KWImage(document,_filename);
@@ -222,7 +228,7 @@ bool KWParag::deleteText( unsigned int _pos, unsigned int _len = 1)
 void KWParag::setFormat( unsigned int _pos, unsigned int _len, const KWFormat &_format )
 {
   if (text.size() == 0) return;
-  
+
   assert( _pos < text.size() );
 
   for (unsigned int i = 0;i < _len;i++)
